--- a/j1a/vhdl/makefile
+++ b/j1a/vhdl/makefile
@@ -1,5 +1,5 @@
 VHDLS = \
-  stack2.vhd \
+  stack_mem.vhd \
   j1.vhd \
   uart/ghdl_uart_pkg.vhd \
   uart/ghdl_uart.vhd \
@@ -16,8 +16,8 @@ ghdl_pty.o : uart/ghdl_pty.c
 simulate: j1_tb
 	./j1_tb 
 j1_tb: ${VHDLS} ghdl_pty.o
-	ghdl -a -O3 --std=02  --ieee=${STD} ${VHDLS} 
-	ghdl -e -O3 -Wl,ghdl_pty.o --std=02  --ieee=${STD} j1_tb 
+	ghdl -a -O3 --std=93c  --ieee=${STD} ${VHDLS} 
+	ghdl -e -O3 -Wl,ghdl_pty.o --std=93c  --ieee=${STD} j1_tb 
 clean:
 	rm *.o *.vcd *.ghw *.cf j1_tb
 	
