Added trivial (and probably buggy) bridge from J1B to WB. The problem is, that reading the peripheral which returns 'X' bit causes the J1B to dead-loop in "." word.

--- a/j1b/vhdl/makefile
+++ b/j1b/vhdl/makefile
@@ -3,6 +3,8 @@ VHDLS = \
   j1.vhd \
   uart/ghdl_uart_pkg.vhd \
   uart/ghdl_uart.vhd \
+  wb/j1b2wb.vhd \
+  wb_slave/my_regs.vhd \
   j1_tb.vhd \
   
 STD=standard
